--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
-    "open": "open http://localhost:3333",
+    "open": "open http://localhost:3000",
     "build": "tsc"
   },
   "keywords": [],
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
-    "typescript": "^5.2.2",
-    "ts-node-dev": "^2.0.0"
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.2.2"
   }
 }
