--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "winston": "^3.11.0"
   },
