--- a/package.json
+++ b/package.json
@@ -2,16 +2,16 @@
   "name": "clean-arch-nodejs",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "vitest",
     "coverage": "vitest run --coverage",
-    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/index.ts",
+    "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules src/main.ts",
     "open": "open http://localhost:3000",
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["nodejs", "clean arch"],
+  "author": "Renan Pupin",
   "license": "MIT",
   "dependencies": {
     "class-validator": "^0.14.0",
