--- a/package.json
+++ b/package.json
@@ -10,16 +10,22 @@
     "open": "open http://localhost:3000",
     "build": "tsc"
   },
-  "keywords": ["nodejs", "clean arch"],
+  "keywords": [
+    "nodejs",
+    "clean arch"
+  ],
   "author": "Renan Pupin",
   "license": "MIT",
   "dependencies": {
+    "@prisma/client": "^5.5.2",
     "class-validator": "^0.14.0",
     "express": "^4.18.2",
     "winston": "^3.11.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.20",
+    "@types/node": "^20.8.10",
+    "prisma": "^5.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
     "vitest": "^0.34.6"
