--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/express": "^4.17.20",
     "@types/node": "^20.8.10",
+    "prettier": "^3.0.3",
     "prisma": "^5.5.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2",
